--- a/boneEx/mybatis/src/main/resources/application.properties
+++ b/boneEx/mybatis/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=mybatis
+# ???? ??
 server.port=80
+# thymeleaf ???? ??
+spring.thymeleaf.cache=false
+# datasource ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
+spring.datasource.username=root
+spring.datasource.password=admin1234
+
+# mybatis \uC124\uC815
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
