--- a/boneEx/mybatis/src/main/resources/application.properties
+++ b/boneEx/mybatis/src/main/resources/application.properties
@@ -1,13 +1,36 @@
 spring.application.name=mybatis
-# ???? ??
+
+#ìë²í¬í¸ ì¤ì 
 server.port=80
-# thymeleaf ???? ??
+
+# thymeleaf ìë¡ê³ ì¹¨ ì ì©
 spring.thymeleaf.cache=false
-# datasource ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
+
+# datasource ì¤ì 
+# log4jdbc ì¤ì  1.ëë¼ì´ë² í´ëì¤ ì¤ì , 2. url ì¤í´ì log4jdbc ì¶ê° 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
 spring.datasource.username=root
 spring.datasource.password=admin1234
 
-# mybatis \uC124\uC815
-mybatis.mapper-locations=classpath:/mapper/**/*.xml
+# mybatis ì¤ì 
+# classpath: -> src/main/resources/
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+# mapper 사용되는 type(package 미리 지정)
+# , 패키지를 추가 설정이 가능, 패턴을 지정
+mybatis.type-aliases-package=ksmart.mybatis.common.*.dto
+
+# banner ì¤ì 
+spring.banner.location=classpath:banner/banner.txt
+
+# logger ì¤ì  íì¼ ê²½ë¡ ì¤ì 
+logging.config=classpath:logback-spring.xml
+
+
+
+
+
+
+
