--- a/boneEx/mybatis/src/main/resources/application.properties
+++ b/boneEx/mybatis/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=mybatis
 
-#ìë²í¬í¸ ì¤ì 
+#서버포트 설정
 server.port=80
 
-# thymeleaf ìë¡ê³ ì¹¨ ì ì©
+# thymeleaf 새로고침 적용
 spring.thymeleaf.cache=false
 
-# datasource ì¤ì 
-# log4jdbc ì¤ì  1.ëë¼ì´ë² í´ëì¤ ì¤ì , 2. url ì¤í´ì log4jdbc ì¶ê° 
+# datasource 설정
+# log4jdbc 설정 1.드라이버 클래스 설정, 2. url 스킴에 log4jdbc 추가 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
@@ -15,17 +15,17 @@ spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/ksmart51db?serverTime
 spring.datasource.username=root
 spring.datasource.password=admin1234
 
-# mybatis ì¤ì 
+# mybatis 설정
 # classpath: -> src/main/resources/
 mybatis.mapper-locations=classpath:mapper/**/*.xml
-# mapper 사용되는 type(package 미리 지정)
-# , 패키지를 추가 설정이 가능, 패턴을 지정
-mybatis.type-aliases-package=ksmart.mybatis.common.*.dto
+# mapper 사용되는 type(package) 미리 지정
+# , 패키지를 추가 설정 가능, 패턴을 지정
+mybatis.type-aliases-package=ksmart.mybatis.*.dto
 
-# banner ì¤ì 
+# banner 설정
 spring.banner.location=classpath:banner/banner.txt
 
-# logger ì¤ì  íì¼ ê²½ë¡ ì¤ì 
+# logger 설정 파일 경로 설정
 logging.config=classpath:logback-spring.xml
 
 
