--- a/boneEx/mybatis/src/main/resources/application.properties
+++ b/boneEx/mybatis/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=mybatis
 
-#서버포트 설정
+#\uC11C\uBC84\uD3EC\uD2B8 \uC124\uC815
 server.port=80
 
-# thymeleaf 새로고침 적용
+# thymeleaf \uC0C8\uB85C\uACE0\uCE68 \uC801\uC6A9
 spring.thymeleaf.cache=false
 
-# datasource 설정
-# log4jdbc 설정 1.드라이버 클래스 설정, 2. url 스킴에 log4jdbc 추가 
+# datasource \uC124\uC815
+# log4jdbc \uC124\uC815 1.\uB4DC\uB77C\uC774\uBC84 \uD074\uB798\uC2A4 \uC124\uC815, 2. url \uC2A4\uD0B4\uC5D0 log4jdbc \uCD94\uAC00 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:mysql://localhost:3306/ksmart51db?serverTimezone=UTC&characterEncoding=UTF8
@@ -15,18 +15,31 @@ spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/ksmart51db?serverTime
 spring.datasource.username=root
 spring.datasource.password=admin1234
 
-# mybatis 설정
+# mybatis \uC124\uC815
 # classpath: -> src/main/resources/
 mybatis.mapper-locations=classpath:mapper/**/*.xml
-# mapper 사용되는 type(package) 미리 지정
-# , 패키지를 추가 설정 가능, 패턴을 지정
+# mapper \uC0AC\uC6A9\uB418\uB294 type(package) \uBBF8\uB9AC \uC9C0\uC815
+# , \uD328\uD0A4\uC9C0\uB97C \uCD94\uAC00 \uC124\uC815 \uAC00\uB2A5, \uD328\uD134\uC744 \uC9C0\uC815
 mybatis.type-aliases-package=ksmart.mybatis.*.dto
 
-# banner 설정
+# banner \uC124\uC815
 spring.banner.location=classpath:banner/banner.txt
 
-# logger 설정 파일 경로 설정
+# logger \uC124\uC815 \uD30C\uC77C \uACBD\uB85C \uC124\uC815
 logging.config=classpath:logback-spring.xml
+
+# jsession \uBE44\uD65C\uC131\uD654(URL\uC8FC\uC18C \uB178\uCD9C x)
+# Trancking mode : \uC138\uC158\uC744 \uC804\uB2F9\uD558\uB294 \uBC29\uBC95
+# \uC138\uC158\uD2B8\uB798\uD0B9\uC744 \uC124\uC815\uD558\uB294 3\uAC00\uC9C0 \uBC29\uBC95\uC73C\uB85C \uC911\uBCF5\uC124\uC815\uC774 \uAC00\uB2A5\uD558\uACE0 \uC124\uC815\uD558\uC9C0 \uC54A\uC73C\uBA74 \uCFE0\uD0A4\uC5D0 \uC758\uD55C \uD2B8\uB798\uD0B9\uB9CC\uC744 \uC0AC\uC6A9\uD558\uB3C4\uB85D \uD55C\uB2E4.
+server.servlet.session.tracking-modes=cookie
+
+# jsessionid \uCFE0\uD0A4\uC758 httpOnly (\uAE30\uBCF8\uAC12 true)
+# true : http Requset \uAC1D\uCCB4\uB85C\uB9CC \uC138\uC158\uCFE0\uD0A4 \uCDE8\uB4DD\uAC00\uB2A5
+# false : \uC2A4\uD06C\uB9BD\uD2B8\uC5D0\uC11C\uB3C4 \uC811\uADFC\uAC00\uB2A5
+server.servlet.session.cookie.http-only=true
+
+# session \uC720\uC9C0\uC2DC\uAC04 \uC870\uC815, 1\uBD84 \uBBF8\uB9CC\uC740 \uC778\uC2DD x , m\uC744 \uC548 \uC4F0\uBA74 \uCD08\uB85C \uACC4\uC0B0
+server.servlet.session.timeout=10m
 
 
 
